# aoc18

./: .gitignore  CMakeLists.txt  README.md
day01/: day01.nb
sources/: common.cpp  common.h  config.h  days.cpp  days.h  main.cpp
